--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -5,65 +5,106 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h1>HögerVänster</h1>
-            <img src="" alt="">
-            <i></i>
-            <i>
-                <a href="">Start</a>
-                <a href="">Utrustning</a>
-                <a href="">Recensioner</a>
-                <a href="">Om oss</a>
-                <a href="">Kontakt</a>
-            </i>
+        <nav class="navbar">
+            <div class="upper-nav">
+                <div class="logo"> 
+                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <h1>HögerVänster</h1>
+                </div>
+                <div class="log-in">
+                    <i class="fa-solid fa-bag-shopping"></i>
+                    <a href="#">Logga in</a>
+                </div>
+            </div>
+            <div class="navbar-links">
+                <a href="../index.html">Start</a>
+                <a href="utrustninng.html">Utrustning</a>
+                <a href="recensioner.html">Recensioner</a>
+                <a href="omoss.html">Om oss</a>
+                <a href="./kontakt.html"><u>Kontakt</u></a>
+            </div>
         </nav>
     </header>
     <main>
-        <section>
-            <h2>Kontakt</h2>
-            <p>
-                Kontakta oss gärna via:
-                Adress:
-                Stockholm
-                Sankt eriksgatan 1
-                Företagsnummer:
-                08-08 08 08
-                Företagsmail:
-                kontakt@hogervanster.se
-            </p>
-            <img src="" alt="">
+        <section class="contact-section1">
+            <div class="contact-heading">
+                <h2>Kontakt</h2>
+            </div>
+            <div class="contact-info">
+                <div class="contact-text">
+                    <p>
+                        Kontakta oss gärna via
+                        <br>
+                        Adress:
+                        <br>
+                        Stockholm
+                        Sankt eriksgatan 1
+                        <br>
+                        Företagsnummer:
+                        <br>
+                        08-08 08 08
+                        <br>
+                        Företagsmail:
+                        <br>
+                        kontakt@hogervanster.se
+                    </p>
+                </div>
+                <div class="contact-image">
+                    <img src="/images/Kontor.jpg" alt="Stor röd tegelbyggnad som är företagets huvudkontor">
+                </div>
+            </div>
         </section>
-        <section> 
+        <section class="contact-section2"> 
             <form action="">
-                <h2>Frågeformulär</h2>
-                <input type="text">
-                <label for="Välj ämne">Välj ämne</label>
-                <select name="Välj ämne" id="Välj ämne">Välj ämne</select>
-                <p>Textruta</p>
-                <button>Skicka</button>
+                <div class="question-heading">
+                    <h2>Frågeformulär</h2>
+                </div>
+                <div class="email-div">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email">
+                    <select name="" id="" required>
+                        <option selected disabled hidden >Välj Ämne</option>
+                        <option value="">Produkter</option>
+                        <option value="">Webbplats</option>
+                        <option value="">Annat</option>
+                    </select>
+                </div>
+                <div class="textarea-div">
+                    <textarea name="text" id="text" cols="50" rows="10" placeholder="Text"></textarea>
+                </div>
+                <div class="submit-div">
+                    <button>Skicka</button>
+                </div>
             </form>
         </section>
     </main>
     <footer>
-        <nav>
-            <a href="">Utrustning</a>
-            <a href="">Recensioner</a>
-            <a href="">Om oss</a>
-            <a href="">Kontakt</a>
+        <nav class="footer-links">
+            <a href="utrustninng.html">Utrustning</a>  
+            <a href="recensioner.html">Recensioner</a>
+            <a href="omoss.html">Om oss</a>
+            <a href="./kontakt.html">Kontakt</a>
         </nav>
-        <p>
-        Innehållet på denna webbplats är upphovsrättsskyddat och tillhör 
-        HögerVänster AB. H&V: s affärsidé är att erbjuda kvalitet till bästa pris på ett hållbart sätt.
-        </p>
-        <nav>
-            <a href="">LÄS MER</a>
-        </nav>
-        <div> 
+        <div class="copywrite-div">
+            <p>
+            Innehållet på denna webbplats är upphovsrättsskyddat och tillhör 
+            HögerVänster AB. H&V:s affärsidé är att erbjuda kvalitet till bästa pris på ett hållbart sätt.
+            <br>
+            <span> <a href="#">LÄS MER</a> </span>
+            </p>
+        </div>
+        <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="" alt="">
+            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
