--- a/pages/omoss.html
+++ b/pages/omoss.html
@@ -5,90 +5,129 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h1>HögerVänster</h1>
-            <img src="" alt="">
-            <i></i>
-            <i>
-                <a href="">Start</a>
-                <a href="">Utrustning</a>
-                <a href="">Recensioner</a>
-                <a href="">Om oss</a>
-                <a href="">Kontakt</a>
-            </i>
+        <nav class="navbar">
+            <div class="upper-nav">
+                <div class="logo"> 
+                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <h1>HögerVänster</h1>
+                </div>
+                <div class="log-in">
+                    <i class="fa-solid fa-bag-shopping"></i>
+                    <a href="#">Logga in</a>
+                </div>
+            </div>
+            <div class="navbar-links">
+                <a href="../index.html">Start</a>
+                <a href="utrustninng.html">Utrustning</a>
+                <a href="recensioner.html">Recensioner</a>
+                <a href="./omoss.html"><u>Om oss</u></a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
         </nav>
     </header>
-    <main>
+    <main class="about-page">
         <section>
-        <h2>Om oss</h2>
-        <h3>"If you can't aim for peace aim between the eyes"</h3>
-        <p>
-            HögerVänster AB grundades 1863 av 
-            Karl-Alfred(PopEye) efter att han pensionerat 
-            sig som proffsboxare.
-        </p>
+            <div class="heading-div">
+                <h2>Om oss</h2>
+            </div>
+            <div class="about-text">
+                <div>
+                    <h3>"If you can't aim for peace aim between the eyes"</h3>
+                </div>
+                <p>
+                    HögerVänster AB grundades 1863 av 
+                    Karl-Alfred(PopEye) efter att han pensionerat 
+                    sig som proffsboxare.
+                </p>
+            </div>
     </section>
     <section>
-        <h2>Anställda</h2>
-        
-        <article> 
-            <img src="" alt="">
-            <h3>IT-ansvarig</h3>
-            <h3>******@hogervanster.com</h3>
-            <p>Info om anställd</p>
-        </article>
-        <article> 
-            <img src="" alt="">
-            <h3>IT-ansvarig</h3>
-            <h3>******@hogervanster.com</h3>
-            <p>Info om anställd</p>
-        </article>
-        <article> 
-            <img src="" alt="">
-            <h3>IT-ansvarig</h3>
-            <h3>******@hogervanster.com</h3>
-            <p>Info om anställd</p>
-        </article>
-        <article> 
-            <img src="" alt="">
-            <h3>IT-ansvarig</h3>
-            <h3>******@hogervanster.com</h3>
-            <p>Info om anställd</p>
-        </article>
-        <article> 
-            <img src="" alt="">
-            <h3>IT-ansvarig</h3>
-            <h3>******@hogervanster.com</h3>
-            <p>Info om anställd</p>
-        </article>
-        <article> 
-            <img src="" alt="">
-            <h3>IT-ansvarig</h3>
-            <h3>******@hogervanster.com</h3>
-            <p>Info om anställd</p>
-        </article>
+        <div class="heading-div">
+            <h2>Anställda</h2>
+        </div>
+        <div class="employees-div">
+            <article> 
+                <img src="/images/Anställd1.jpg" alt="Anställd nummer 1, Byggare Bob.">
+                <div class="employee-text">
+                    <h3>IT-ansvarig</h3>
+                    <h3>******@hogervanster.com</h3>
+                    <p>Kan lappa ihop det mesta. 40 år i branschen.</p>
+                </div>
+            </article>
+            <article> 
+                <img src="/images/Anställd2.jpg" alt="Anställd nummer 2, Musse Pigg.">
+                <div class="employee-text">
+                    <h3>Sälj-chef</h3>
+                    <h3>******@hogervanster.com</h3>
+                    <p>Duktig</p>
+                </div>
+            </article>
+        </div>
+        <div class="employees-div">
+            <article> 
+                <img src="/images/Anställd3.png" alt="Anställd nummer 3, Stitch.">
+                <div class="employee-text">
+                    <h3>Frontend utvecklare</h3>
+                    <h3>******@hogervanster.com</h3>
+                    <p>Bra</p>
+                </div>
+            </article>
+            <article> 
+                <img src="/images/Anställd4.jpg" alt="Anställd nummer 4, Katten Gustav.">
+                <div class="employee-text">
+                    <h3>Testare</h3>
+                    <h3>******@hogervanster.com</h3>
+                    <p>Snäll</p>
+                </div>
+            </article>
+        </div>
+        <div class="employees-div">
+            <article> 
+                <img src="/images/Anställd5.png" alt="Anställd nummer 5, Scooby.">
+                <div class="employee-text">
+                    <h3>Backend programerare</h3>
+                    <h3>******@hogervanster.com</h3>
+                    <p>Vänlig</p>
+                </div>
+            </article>
+            <article> 
+                <img src="/images/Anställd6.jpg" alt="Anställd nummer 6, Fred Flinta">
+                <div class="employee-text">
+                    <h3>Produkt utvecklare</h3>
+                    <h3>******@hogervanster.com</h3>
+                    <p>Härlig</p>
+                </div>
+            </article>
+        </div>
     </section>
     </main>
     <footer>
-        <nav>
-            <a href="">Utrustning</a>
-            <a href="">Recensioner</a>
-            <a href="">Om oss</a>
-            <a href="">Kontakt</a>
+        <nav class="footer-links">
+            <a href="utrustninng.html">Utrustning</a>
+            <a href="recensioner.html">Recensioner</a>
+            <a href="./omoss.html">Om oss</a>
+            <a href="kontakt.html">Kontakt</a>
         </nav>
-        <p>
-        Innehållet på denna webbplats är upphovsrättsskyddat och tillhör 
-        HögerVänster AB. H&V: s affärsidé är att erbjuda kvalitet till bästa pris på ett hållbart sätt.
-        </p>
-        <nav>
-            <a href="">LÄS MER</a>
-        </nav>
-        <div> 
+        <div class="copywrite-div">
+            <p>
+            Innehållet på denna webbplats är upphovsrättsskyddat och tillhör 
+            HögerVänster AB. H&V:s affärsidé är att erbjuda kvalitet till bästa pris på ett hållbart sätt.
+            <br>
+            <span> <a href="#">LÄS MER</a> </span>
+            </p>
+        </div>
+        <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="" alt="">
+            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
