--- a/pages/recensioner.html
+++ b/pages/recensioner.html
@@ -5,68 +5,119 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
+    <link rel="stylesheet" 
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 <body>
     <header>
-        <nav>
-            <h1>HögerVänster</h1>
-            <img src="" alt="">
-            <i></i>
-            <i>
-                <a href="">Start</a>
-                <a href="">Utrustning</a>
-                <a href="">Recensioner</a>
-                <a href="">Om oss</a>
-                <a href="">Kontakt</a>
-            </i>
+        <nav class="navbar">
+            <div class="upper-nav">
+                <div class="logo"> 
+                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <h1>HögerVänster</h1>
+                </div>
+                <div class="log-in"> 
+                    <i class="fa-solid fa-bag-shopping"></i>
+                    <a href="#">Logga in</a>
+                </div>
+            </div>
+            <div class="navbar-links">
+                <a href="../index.html">Start</a>
+                <a href="utrustninng.html">Utrustning</a>
+                <a href="./recensioner.html"><u>Recensioner</u></a>
+                <a href="omoss.html">Om oss</a>
+                <a href="kontakt.html">Kontakt</a>
+            </div>
         </nav>
     </header>
-    <main>
-        <h2>Recensioner</h2>
-        <i></i>
-        <article>
-            <img src="" alt="">
-            <h2></h2>
-            <i></i>
-            <p></p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <h2></h2>
-            <i></i>
-            <p></p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <h2></h2>
-            <i></i>
-            <p></p>
-        </article>
-        <article>
-            <img src="" alt="">
-            <h2></h2>
-            <i></i>
-            <p></p>
-        </article>
-        <button>Ladda fler</button>
+    <main class="review-page">
+        <div class="filtering-div">
+            <select class="product-choice"> 
+                <option value="Välj produkt" selected disabled hidden>Välj produkt</option>
+                <option value="Handskar">Handskar</option> 
+                <option value="Byxor">Byxor</option>
+             </select>
+            <div class="filter">
+                <p>Filter</p>
+                <i class="fa-solid fa-sliders"></i>
+            </div>
+        </div>
+        <div class="reviews1">
+            <article>
+                <img src="/images/Produkt1.jpg" alt="Svarta boxningshandskar av märket venum">
+                <div class="review-text">
+                    <h2>Anders Andersson</h2>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <p>Klockrena, är väldigt nöjd.</p>
+                </div>
+            </article>
+            <article>
+                <img src="/images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum">
+                <div class="review-text"> 
+                    <h2>Anders Andersson</h2>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <p>Klockrena, väldigt nöjd</p>
+                </div>
+            </article>
+        </div>
+        <div class="reviews2">
+            <article>
+                <img src="/images/Produkt3.jpg" alt="Vit guldiga thaiboxningsshorts av märket venum">
+                <div class="review-text">
+                    <h2>Anders Andersson</h2>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <p>Klockrena, väldigt nöjd</p>
+                </div>
+            </article>
+            <article>
+                <img src="/images/Produkt4.jpg" alt="Grön svarta thaiboxningsshorts">
+                <div class="review-text">
+                <h2>Anders Andersson</h2>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-stroke"></i>
+                    <p>Klockrena, väldigt nöjd</p>
+                </div>
+            </article>
+        </div>
+        <button class="review-btn">Ladda fler</button>
     </main>
     <footer>
-        <nav>
-            <a href="">Utrustning</a>
-            <a href="">Recensioner</a>
-            <a href="">Om oss</a>
-            <a href="">Kontakt</a>
+        <nav class="footer-links">
+            <a href="utrustninng.html">Utrustning</a>
+            <a href="./recensioner.html">Recensioner</a>
+            <a href="omoss.html">Om oss</a>
+            <a href="kontakt.html">Kontakt</a>
         </nav>
-        <p>
-        Innehållet på denna webbplats är upphovsrättsskyddat och tillhör 
-        HögerVänster AB. H&V: s affärsidé är att erbjuda kvalitet till bästa pris på ett hållbart sätt.
-        </p>
-        <nav>
-            <a href="">LÄS MER</a>
-        </nav>
-        <div> 
+        <div class="copywrite-div">
+            <p>
+            Innehållet på denna webbplats är upphovsrättsskyddat och tillhör 
+            HögerVänster AB. H&V:s affärsidé är att erbjuda kvalitet till bästa pris på ett hållbart sätt.
+            <br>
+            <span> <a href="#">LÄS MER</a> </span>
+            </p>
+        </div>
+        <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="" alt="">
+            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
