--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="index.js"></script>
 </head>
 <body>
@@ -38,13 +38,13 @@
     <main class="start-page">
         <section class="cta-section">
                 <article class="cta-article">
-                    <h2>Hitta Kvalitativ utrustning <br> inom kampsport hos oss</h2>
+                    <h2>Hitta kvalitativ utrustning <br> inom kampsport hos oss</h2>
                     <p>
-                        Vi stolta över sveriges bästa 
+                        Vi är stolta över sveriges bästa 
                         utbut och kvalite inom kampsport. 
                         Ingen har lyckats mäta sig med 
-                        oss <br> och därför har vi sveriges 
-                        nöjdaste kunder
+                        oss och därför har vi sveriges 
+                        nöjdaste kunder.
                     </p>
                     <nav>
                         <a href="pages/utrustninng.html">Shoppa nu</a>
