--- a/pages/omoss.html
+++ b/pages/omoss.html
@@ -60,7 +60,7 @@
                 <div class="employee-text">
                     <h3>IT-ansvarig</h3>
                     <h3>******@hogervanster.com</h3>
-                    <p>Kan lappa ihop det mesta. 40 år i branschen.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, voluptas?</p>
                 </div>
             </article>
             <article> 
@@ -68,7 +68,7 @@
                 <div class="employee-text">
                     <h3>Sälj-chef</h3>
                     <h3>******@hogervanster.com</h3>
-                    <p>Duktig</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum, consequuntur!</p>
                 </div>
             </article>
         </div>
@@ -78,7 +78,7 @@
                 <div class="employee-text">
                     <h3>Frontend utvecklare</h3>
                     <h3>******@hogervanster.com</h3>
-                    <p>Bra</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, repudiandae?</p>
                 </div>
             </article>
             <article> 
@@ -86,7 +86,7 @@
                 <div class="employee-text">
                     <h3>Testare</h3>
                     <h3>******@hogervanster.com</h3>
-                    <p>Snäll</p>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero, numquam.</p>
                 </div>
             </article>
         </div>
@@ -96,7 +96,7 @@
                 <div class="employee-text">
                     <h3>Backend programerare</h3>
                     <h3>******@hogervanster.com</h3>
-                    <p>Vänlig</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, voluptatibus?</p>
                 </div>
             </article>
             <article> 
@@ -104,7 +104,7 @@
                 <div class="employee-text">
                     <h3>Produkt utvecklare</h3>
                     <h3>******@hogervanster.com</h3>
-                    <p>Härlig</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid, quod!</p>
                 </div>
             </article>
         </div>
