--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="navbar">
             <div class="upper-nav">
                 <div class="logo"> 
-                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <img src="images/popeye.png" alt="Karl-Alfred röker pipa">
                     <h1>HögerVänster</h1>
                 </div>
                 <div class="log-in">
@@ -51,7 +51,7 @@
                     </nav>
                 </article>
                 <article class="start-img">
-                    <img src="/images/muhammad-ali-pardon.webp" alt="Muhammed Ali står i boxningsringen och kollar ner på sin motståndare som han precis har knockat">
+                    <img src="images/muhammad-ali-pardon.webp" alt="Muhammed Ali står i boxningsringen och kollar ner på sin motståndare som han precis har knockat">
                 </article>
         </section>
         <section>
@@ -60,11 +60,11 @@
             </div>
             <div class="popular-div">
                 <article class="popular-article">
-                    <img src="/images/Produkt3.jpg" alt="Vit guldiga shorts från märket venum.">
+                    <img src="images/Produkt3.jpg" alt="Vit guldiga shorts från märket venum.">
                     <a href="#">Byxor</a>
                 </article>
                 <article class="popular-article">
-                    <img src="/images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum.">
+                    <img src="images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum.">
                     <a href="#">Handskar</a>
                 </article>
             </div>
@@ -87,7 +87,7 @@
         </div>
         <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+            <img src="images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
