--- a/pages/omoss.html
+++ b/pages/omoss.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="upper-nav">
                 <div class="logo"> 
-                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
                     <h1>HögerVänster</h1>
                 </div>
                 <div class="log-in">
@@ -27,10 +27,10 @@
             </div>
             <div class="navbar-links">
                 <a href="../index.html">Start</a>
-                <a href="utrustninng.html">Utrustning</a>
-                <a href="recensioner.html">Recensioner</a>
+                <a href="./utrustninng.html">Utrustning</a>
+                <a href="./recensioner.html">Recensioner</a>
                 <a href="./omoss.html"><u>Om oss</u></a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="./kontakt.html">Kontakt</a>
             </div>
         </nav>
     </header>
@@ -56,7 +56,7 @@
         </div>
         <div class="employees-div">
             <article> 
-                <img src="/images/Anställd1.jpg" alt="Anställd nummer 1, Byggare Bob.">
+                <img src="../images/Anställd1.jpg" alt="Anställd nummer 1, Byggare Bob.">
                 <div class="employee-text">
                     <h3>IT-ansvarig</h3>
                     <h3>******@hogervanster.com</h3>
@@ -64,7 +64,7 @@
                 </div>
             </article>
             <article> 
-                <img src="/images/Anställd2.jpg" alt="Anställd nummer 2, Musse Pigg.">
+                <img src="../images/Anställd2.jpg" alt="Anställd nummer 2, Musse Pigg.">
                 <div class="employee-text">
                     <h3>Sälj-chef</h3>
                     <h3>******@hogervanster.com</h3>
@@ -74,7 +74,7 @@
         </div>
         <div class="employees-div">
             <article> 
-                <img src="/images/Anställd3.png" alt="Anställd nummer 3, Stitch.">
+                <img src="../images/Anställd3.png" alt="Anställd nummer 3, Stitch.">
                 <div class="employee-text">
                     <h3>Frontend utvecklare</h3>
                     <h3>******@hogervanster.com</h3>
@@ -82,7 +82,7 @@
                 </div>
             </article>
             <article> 
-                <img src="/images/Anställd4.jpg" alt="Anställd nummer 4, Katten Gustav.">
+                <img src="../images/Anställd4.jpg" alt="Anställd nummer 4, Katten Gustav.">
                 <div class="employee-text">
                     <h3>Testare</h3>
                     <h3>******@hogervanster.com</h3>
@@ -92,7 +92,7 @@
         </div>
         <div class="employees-div">
             <article> 
-                <img src="/images/Anställd5.png" alt="Anställd nummer 5, Scooby.">
+                <img src="../images/Anställd5.png" alt="Anställd nummer 5, Scooby.">
                 <div class="employee-text">
                     <h3>Backend programerare</h3>
                     <h3>******@hogervanster.com</h3>
@@ -100,7 +100,7 @@
                 </div>
             </article>
             <article> 
-                <img src="/images/Anställd6.jpg" alt="Anställd nummer 6, Fred Flinta">
+                <img src="../images/Anställd6.jpg" alt="Anställd nummer 6, Fred Flinta">
                 <div class="employee-text">
                     <h3>Produkt utvecklare</h3>
                     <h3>******@hogervanster.com</h3>
@@ -112,10 +112,10 @@
     </main>
     <footer>
         <nav class="footer-links">
-            <a href="utrustninng.html">Utrustning</a>
-            <a href="recensioner.html">Recensioner</a>
+            <a href="./utrustninng.html">Utrustning</a>
+            <a href="./recensioner.html">Recensioner</a>
             <a href="./omoss.html">Om oss</a>
-            <a href="kontakt.html">Kontakt</a>
+            <a href="./kontakt.html">Kontakt</a>
         </nav>
         <div class="copywrite-div">
             <p>
@@ -127,7 +127,7 @@
         </div>
         <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+            <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
