--- a/pages/kontakt.html
+++ b/pages/kontakt.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="upper-nav">
                 <div class="logo"> 
-                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
                     <h1>HögerVänster</h1>
                 </div>
                 <div class="log-in">
@@ -27,9 +27,9 @@
             </div>
             <div class="navbar-links">
                 <a href="../index.html">Start</a>
-                <a href="utrustninng.html">Utrustning</a>
-                <a href="recensioner.html">Recensioner</a>
-                <a href="omoss.html">Om oss</a>
+                <a href="./utrustninng.html">Utrustning</a>
+                <a href="./recensioner.html">Recensioner</a>
+                <a href="./omoss.html">Om oss</a>
                 <a href="./kontakt.html"><u>Kontakt</u></a>
             </div>
         </nav>
@@ -59,7 +59,7 @@
                     </p>
                 </div>
                 <div class="contact-image">
-                    <img src="/images/Kontor.jpg" alt="Stor röd tegelbyggnad som är företagets huvudkontor">
+                    <img src="../images/Kontor.jpg" alt="Stor röd tegelbyggnad som är företagets huvudkontor">
                 </div>
             </div>
         </section>
@@ -89,9 +89,9 @@
     </main>
     <footer>
         <nav class="footer-links">
-            <a href="utrustninng.html">Utrustning</a>  
-            <a href="recensioner.html">Recensioner</a>
-            <a href="omoss.html">Om oss</a>
+            <a href="./utrustninng.html">Utrustning</a>  
+            <a href="./recensioner.html">Recensioner</a>
+            <a href="./omoss.html">Om oss</a>
             <a href="./kontakt.html">Kontakt</a>
         </nav>
         <div class="copywrite-div">
@@ -104,7 +104,7 @@
         </div>
         <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+            <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
