--- a/pages/recensioner.html
+++ b/pages/recensioner.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="upper-nav">
                 <div class="logo"> 
-                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
                     <h1>HögerVänster</h1>
                 </div>
                 <div class="log-in"> 
@@ -27,10 +27,10 @@
             </div>
             <div class="navbar-links">
                 <a href="../index.html">Start</a>
-                <a href="utrustninng.html">Utrustning</a>
+                <a href="./utrustninng.html">Utrustning</a>
                 <a href="./recensioner.html"><u>Recensioner</u></a>
-                <a href="omoss.html">Om oss</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="./omoss.html">Om oss</a>
+                <a href="./kontakt.html">Kontakt</a>
             </div>
         </nav>
     </header>
@@ -48,7 +48,7 @@
         </div>
         <div class="reviews1">
             <article>
-                <img src="/images/Produkt1.jpg" alt="Svarta boxningshandskar av märket venum">
+                <img src="../images/Produkt1.jpg" alt="Svarta boxningshandskar av märket venum">
                 <div class="review-text">
                     <h2>Anders Andersson</h2>
                     <i class="fa-solid fa-star"></i>
@@ -60,7 +60,7 @@
                 </div>
             </article>
             <article>
-                <img src="/images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum">
+                <img src="../images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum">
                 <div class="review-text"> 
                     <h2>Anders Andersson</h2>
                     <i class="fa-solid fa-star"></i>
@@ -74,7 +74,7 @@
         </div>
         <div class="reviews2">
             <article>
-                <img src="/images/Produkt3.jpg" alt="Vit guldiga thaiboxningsshorts av märket venum">
+                <img src="../images/Produkt3.jpg" alt="Vit guldiga thaiboxningsshorts av märket venum">
                 <div class="review-text">
                     <h2>Anders Andersson</h2>
                     <i class="fa-solid fa-star"></i>
@@ -86,7 +86,7 @@
                 </div>
             </article>
             <article>
-                <img src="/images/Produkt4.jpg" alt="Grön svarta thaiboxningsshorts">
+                <img src="../images/Produkt4.jpg" alt="Grön svarta thaiboxningsshorts">
                 <div class="review-text">
                 <h2>Anders Andersson</h2>
                     <i class="fa-solid fa-star"></i>
@@ -102,10 +102,10 @@
     </main>
     <footer>
         <nav class="footer-links">
-            <a href="utrustninng.html">Utrustning</a>
+            <a href="./utrustninng.html">Utrustning</a>
             <a href="./recensioner.html">Recensioner</a>
-            <a href="omoss.html">Om oss</a>
-            <a href="kontakt.html">Kontakt</a>
+            <a href="./omoss.html">Om oss</a>
+            <a href="./kontakt.html">Kontakt</a>
         </nav>
         <div class="copywrite-div">
             <p>
@@ -117,7 +117,7 @@
         </div>
         <div class="footer-logo"> 
             <h3>Höger</h3>
-            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+            <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
             <h3>Vänster</h3>
         </div>
     </footer>
