--- a/pages/utrustninng.html
+++ b/pages/utrustninng.html
@@ -10,14 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Rajdhani:wght@300&family=Shadows+Into+Light&family=Tajawal:wght@300&family=Titillium+Web:wght@200&family=Varela+Round&family=Yanone+Kaffeesatz:wght@200&display=swap" rel="stylesheet">
     <link rel="stylesheet" 
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="/styles/style.css"/>
+    <link rel="stylesheet" href="../styles/style.css"/>
 </head>
 <body>
     <header>
         <nav class="navbar">
             <div class="upper-nav">
                 <div class="logo"> 
-                    <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+                    <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
                     <h1>HögerVänster</h1>
                 </div>
                 <div class="log-in">
@@ -28,9 +28,9 @@
             <div class="navbar-links">
                 <a href="../index.html">Start</a>
                 <a href="./utrustninng.html"><u>Utrustning</u></a>
-                <a href="recensioner.html">Recensioner</a>
-                <a href="omoss.html">Om oss</a>
-                <a href="kontakt.html">Kontakt</a>
+                <a href="./recensioner.html">Recensioner</a>
+                <a href="./omoss.html">Om oss</a>
+                <a href="./kontakt.html">Kontakt</a>
             </div>
         </nav>
     </header>
@@ -51,7 +51,7 @@
         <section>
             <div class="products">
                 <article class="product-article">
-                        <img src="/images/Produkt1.jpg" alt="Svarta boxningshandskar av märket venum">
+                        <img src="../images/Produkt1.jpg" alt="Svarta boxningshandskar av märket venum">
                         <div class="product-h2">
                             <h2>VENUM: ELITE BOXNINGSHANDSKAR - SVART/SVART</h2>
                         </div>
@@ -61,7 +61,7 @@
                         </div>
                 </article>
                 <article class="product-article">
-                        <img src="/images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum">
+                        <img src="../images/Produkt2.jpg" alt="Svart guldiga boxningshandskar av märket venum">
                         <div class="product-h2">
                             <h2>VENUM: ELITE BOXNINGSHANDSKAR - SVART/GULD</h2>
                         </div>
@@ -71,7 +71,7 @@
                         </div>
                 </article>
                 <article class="product-article">
-                    <img src="/images/Produkt3.jpg" alt="Vit guldiga thaiboxningsshorts av märket venum">
+                    <img src="../images/Produkt3.jpg" alt="Vit guldiga thaiboxningsshorts av märket venum">
                     <div class="product-h2">
                         <h2>VENUM: MUAY THAI SHORTS CLASSIC - VIT</h2>
                     </div>
@@ -83,7 +83,7 @@
             </div>
             <div class="products">
                 <article class="product-article">
-                        <img src="/images/Produkt4.jpg" alt="Grön svarta thaiboxningsshorts">
+                        <img src="../images/Produkt4.jpg" alt="Grön svarta thaiboxningsshorts">
                         <div class="product-h2"> 
                             <h2>BOOSTER: RETRO HYBRID MUAY THAI SHORTS - GRÖN/SVART</h2>
                         </div>
@@ -93,7 +93,7 @@
                         </div>
                 </article>
                 <article class="product-article">
-                        <img src="/images/Produkt5.jpg" alt="Koppar färgade thaiboxningsbenskydd från Danger.">
+                        <img src="../images/Produkt5.jpg" alt="Koppar färgade thaiboxningsbenskydd från Danger.">
                         <div class="product-h2">
                             <h2>DANGER EQUIPMENT SHINGUARD SUPER MAX 2.0</h2>  
                         </div> 
@@ -103,7 +103,7 @@
                         </div> 
                 </article>
                 <article class="product-article">
-                    <img src="/images/Produkt6.jpg" alt="Svart guldiga thaiboxningsbenskydd från egacy.">
+                    <img src="../images/Produkt6.jpg" alt="Svart guldiga thaiboxningsbenskydd från egacy.">
                     <div class="product-h2">
                         <h2>LEGACY SL8 BENSKYDD CLASSIC-KOPPAR 2.0</h2> 
                     </div> 
@@ -119,9 +119,9 @@
     <footer>
         <nav class="footer-links">
             <a href="./utrustninng.html">Utrustning</a>
-            <a href="recensioner.html">Recensioner</a>
-            <a href="omoss.html">Om oss</a>
-            <a href="kontakt.html">Kontakt</a>
+            <a href="./recensioner.html">Recensioner</a>
+            <a href="./omoss.html">Om oss</a>
+            <a href="./kontakt.html">Kontakt</a>
         </nav>
         <div class="copywrite-div">
             <p>
@@ -133,7 +133,7 @@
         </div>
         <div class="footer-logo"> 
             <h2>Höger</h2>
-            <img src="/images/popeye.png" alt="Karl-Alfred röker pipa">
+            <img src="../images/popeye.png" alt="Karl-Alfred röker pipa">
             <h2>Vänster</h2>
         </div>
     </footer>
